[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/CodexMenu.gd" id="1_codex"]

[node name="CodexMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_codex")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.07, 0.15, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 30.0
offset_right = -40.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 28
text = "üìñ ‡∏™‡∏°‡∏∏‡∏î‡∏†‡∏≤‡∏û‡∏Ñ‡∏ß‡∏≤‡∏°‡∏£‡∏π‡πâ (Knowledge Codex)"

[node name="SummaryLabel" type="Label" parent="Panel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
horizontal_alignment = 2
text = "‡∏™‡∏∞‡∏™‡∏° 0/15 ‡πÉ‡∏ö | ‡πÄ‡∏ã‡πá‡∏ï‡∏™‡∏≥‡πÄ‡∏£‡πá‡∏à 0/6"

[node name="BackBtn" type="Button" parent="Panel/VBox/Header"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
text = "‡∏Å‡∏•‡∏±‡∏ö"

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="CardGrid" type="GridContainer" parent="Panel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 4

[node name="DetailPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -260.0
offset_right = 280.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
z_index = 10

[node name="VBox" type="VBoxContainer" parent="DetailPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 20.0
offset_right = -25.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="CardName" type="Label" parent="DetailPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
horizontal_alignment = 1
text = "‡∏ä‡∏∑‡πà‡∏≠‡∏Å‡∏≤‡∏£‡πå‡∏î"

[node name="CardImage" type="TextureRect" parent="DetailPanel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)
expand_mode = 1
stretch_mode = 5

[node name="CardCategory" type="Label" parent="DetailPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
text = "‡∏´‡∏°‡∏ß‡∏î‡∏´‡∏°‡∏π‡πà: ..."

[node name="CardDesc" type="RichTextLabel" parent="DetailPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 80)
bbcode_enabled = true
text = "‡∏Ñ‡∏≥‡∏≠‡∏ò‡∏¥‡∏ö‡∏≤‡∏¢‡∏Å‡∏≤‡∏£‡πå‡∏î"

[node name="SetInfo" type="Label" parent="DetailPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
text = "‡πÄ‡∏ã‡πá‡∏ï: ..."

[node name="CloseBtn" type="Button" parent="DetailPanel/VBox"]
layout_mode = 2
text = "‡∏õ‡∏¥‡∏î"
